// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiKeyboardAccessible adds accessibility attributes tabindex and role 1`] = `
<div
  role="button"
  tabindex="0"
/>
`;

exports[`WuiKeyboardAccessible doesn't override pre-existing accessibility attributes role 1`] = `
<div
  role="button"
  tabindex="0"
/>
`;

exports[`WuiKeyboardAccessible doesn't override pre-existing accessibility attributes tabindex 1`] = `
<div
  role="button"
  tabindex="1"
/>
`;
